src/components/product/Product.module.scss
.productContainer {
    flex: 1;
    display: flex;
    position: relative;
    background-color:  rgb(12, 55, 62);
    border-radius: 10px;
    border: 1px solid rgb(0, 173, 179);
    box-sizing: border-box;
    margin-left: 2%;
    margin-right: 2%;

    &:hover {
        box-shadow:
            0 0.1vw 0.1vw rgb(0, 173, 179),
            0 -0.1vw 0.1vw rgb(0, 173, 179),
            0.1vw 0 0.1vw rgb(0, 173, 179),
            -0.1vw 0 0.1vw rgb(0, 173, 179);

        .productName {
            color: rgb(111, 255, 0) !important;
            opacity: 80% !important;

            &:hover {
                color: rgb(111, 255, 0) !important;
                opacity: 100% !important;
            }
        }
    }

    .imageContainer {
        background-color: aqua;
        border-radius: 10px;
        width: 20%;
        display: flex;

        img {

            min-width: 100%;
            height: 100%;
            border-top-left-radius: 10px;
            border-bottom-left-radius: 10px;
        }
    }

    .detailsContainer {
        flex: 1;
        display: flex;
        flex-direction: column;

        .nameContainer {
            height: 3%;
            flex: 1;
            display: flex;
            align-items: center;

            .productName {
                margin-left: 2%;
                font-family: Open Sans, sans-serif;
                flex: 1;
                font-size: 26px;
                font-weight: 400;
                color: white;
                cursor: pointer;
            }
        }

        .infoContainer {
            flex: 1;
            display: flex;
            flex-direction: row;
            width: 100%;

            .productPrice {
                margin-left: 2%;
                flex: 2;
                display: flex;
                align-items: end;
                width: 40%;
                font-weight: 500;
                font-size: 28px;
                font-family: Roboto, sans-serif;
                color: white;

                .price {
                    margin-right: 3%;
                }
            }


            .quantityContainer {
                width: 25%;
                flex: 1;
                display: flex;
                align-items: center;

                .quantityLeftArrow,
                .quantityRightArrow {
                    position: relative;
                    font-size: 18px;
                    cursor: pointer;
                    width: 45%;
                    height: 90%;
                    stroke: rgb(0, 173, 179);;
                    stroke-width: 7px;
                    color: rgb(6, 37, 42);
                    z-index: 900;


                }

                .quantityLeftArrow {
                    right: -5%;

                    &:hover {
                        stroke: red;
                    }

                    &:active {
                        stroke: red
                    }
                }

                .quantityRightArrow {
                    left: -5%;

                    &:hover {
                        stroke: rgb(0, 255, 0);
                    }

                    &:active {
                        stroke: rgb(0, 255, 0);
                    }
                }

                input {
                    width: 55%;
                    height: 55%;
                    border-radius: 0.6vw;
                    font-size: 22px;
                    text-align: center;
                    color: white;
                    background-color: rgb(6, 37, 42);
                    border: 1px solid rgb(0, 173, 179);;
                    z-index: 901;
                    cursor: pointer;

                    &::-webkit-outer-spin-button,
                    &::-webkit-inner-spin-button {
                        -webkit-appearance: none;
                    }

                    &:focus {
                        border-color: #00ff3c;
                        outline: none;
                    }

                    &:hover {
                        border-color: rgb(0, 255, 0);
                    }

                    &:hover:focus {
                        border-color: #00ff3c;
                    }
                }
            }

            .addBtnContainer {
                flex: 0.5;
                width: 20%;
                display: flex;
                justify-content: center;
                align-items: center;
                padding-right: 2%;

                button {
                    width: 100%;
                    height: 65%;
                    background-color: rgb(6, 37, 42);
                    align-items: center;
                    justify-content: center;
                    transition: background-color 0.2s ease;
                    border-radius: 10px;
                    color: white;
                    font-size: 20px;
                    border: 1px solid rgb(0, 173, 179);;
                    cursor: pointer;


                    &:hover {
                        border-color: #00ff3c;
                        outline: none;
                    }

                    &:active {
                        background-color: #5fe27d;
                    }

                    &:focus {
                        outline: none;
                        border-color: #00ff3c;
                    }

                    &:focus:not(:active) {
                        border-color: rgb(0, 173, 179);
                    }

                    &:hover:focus {
                        border-color: #00ff3c;
                    }

                    &:hover:focus:not(:active) {
                        border-color: rgb(0, 173, 179);
                    }
                }
            }
        }
    }
}

@media (max-width: 1250px) {
    .productContainer {
        .detailsContainer {
            .nameContainer {
                .productName {
                    font-size: 22px;

                }
            }

            .infoContainer {
                .productPrice {
                    font-size: 24px;
                }
            }
        }
    }
}



@media (max-width: 1000px) {
    .productContainer {
        .detailsContainer {
            .nameContainer {
                .productName {
                    font-size: 20px;

                }
            }

            .infoContainer {
                .productPrice {
                    font-size: 22px;
                }

                .quantityContainer {

                    .quantityLeftArrow,
                    .quantityRightArrow {
                        font-size: 14px;
                        cursor: pointer;
                        width: 42%;
                        height: 85%;
                    }

                    input {
                        width: 50%;
                        height: 50%;
                        font-size: 20px;
                    }
                }

                .addBtnContainer {
                    button {
                        font-size: 16px;
                    }
                }
            }
        }
    }
}

@media (max-width: 800px) {
    .productContainer {
        .detailsContainer {
            .nameContainer {
                .productName {
                    font-size: 18px;

                }
            }

            .infoContainer {
                .productPrice {
                    font-size: 20px;
                }

                .quantityContainer {

                    .quantityLeftArrow,
                    .quantityRightArrow {
                        font-size: 14px;
                        cursor: pointer;
                        width: 28%;
                        height: 80%;
                    }

                    input {
                        width: 40%;
                        height: 40%;
                        font-size: 14px;
                    }
                }

                .addBtnContainer {
                    button {
                        font-size: 12px;
                    }
                }
            }
        }
    }
}



@media (max-width: 500px) {
    .productContainer {

        .detailsContainer {
            .nameContainer {
                .productName {
                    font-size: 15px;

                }
            }

            .infoContainer {
                .productPrice {
                    font-size: 15px;
                }

                .quantityContainer {

                    .quantityLeftArrow,
                    .quantityRightArrow {
                        font-size: 12px;
                        cursor: pointer;
                        width: 25%;
                        height: 65%;
                    }

                    input {
                        width: 35%;
                        height: 35%;
                        font-size: 12px;
                    }
                }

                .addBtnContainer {
                    button {
                        font-size: 7px;
                    }
                }
            }
        }
    }
}

